@@ -252,7 +252,7 @@
       \item \code{stem()} now discards infinite inputs rather than
       hanging.  (\PR{15376})
 
-      \item \code{model.matrix()} now works with very long lhs
+      \item \code{model.matrix()} now works with very long LHS
       names (more than 500 bytes).  (\PR{15377})
 
       \item \code{integrate()} reverts to the pre-2.12.0 behaviour.
@@ -263,6 +263,11 @@
 
       \item \R is now better protected against people trying to interact
       with the console in startup code.  (\PR{15325})
+      
+      \item Subsetting 1D arrays often lost dimnames (\PR{15301}).
+
+      \item Unary \code{+} on a logical vector did not coerce to
+      integer, although unary \code{-} did.
     }
   }
 }
